--- a/config/optimize_BTSP_CA1_cell9_config.yaml
+++ b/config/optimize_BTSP_CA1_cell9_config.yaml
@@ -95,19 +95,19 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP2_CA1_v12
+- - optimize_BTSP_CA1
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP2_CA1_v12
+- source: optimize_BTSP_CA1
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP2_CA1_v12
+- source: optimize_BTSP_CA1
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP2_CA1_v12: get_objectives
+  optimize_BTSP_CA1: get_objectives
 kwargs:
   data_file_name: '20180411_BTSP2_CA1_data.hdf5'
   verbose: 1
