--- a/config/optimize_BTSP_CA1_synthetic_config.yaml
+++ b/config/optimize_BTSP_CA1_synthetic_config.yaml
@@ -101,11 +101,12 @@ get_objectives:
   optimize_BTSP_CA1_synthetic: get_objectives
 kwargs:
   verbose: 1
-  min_delta_weight: -0.2
+  min_delta_weight: 0.
   ramp_scaling_factor: 0.002956
   induction_locs:
-    1: 130.
-    2: 10.
+    '1': 130.
+    '2_null': 120.
+    '2_shift': 10.
 objective_names:
 - induction1_ramp_residual_score
 - induction2_null_ramp_residual_score
@@ -141,7 +142,6 @@ target_val:
   peak_shift_2: 0.
   peak_val_1: 8.
   peak_val_2: 8.
-  # min_val_2: 3.
   delta_peak_val_1: -4.
 x0:
   global_signal_decay: 150.
