--- a/config/simulate_BTSP_CA1_synthetic_population_config.yaml
+++ b/config/simulate_BTSP_CA1_synthetic_population_config.yaml
@@ -3,27 +3,28 @@ ramp_scaling_factor: 0.002956
 global_signal_peak: 0.9259394464
 initial_ramp_peak_val: 8.
 target_peak_shift: -10.
-induction_locs:
+reward_locs:
   1: 30.
   2: 90.
-seed: 616898028
+seed_offset: 600000000
+num_cells: 200
 target_range:
   residuals: 0.1
   weights_smoothness: 0.01
   delta_min_val: 0.01
   delta_peak_val: 0.01
 x0:
-  global_signal_decay: 1.040013E+02
-  local_signal_rise: 8.224696E+00
-  rMC0: 7.934749E+00
-  rMC_th: 4.765172E-01
-  rMC_peak: 8.017565E-01
-  global_signal_rise: 2.962309E+01
-  peak_delta_weight: 2.194480E+00
-  rCM0: 2.040759E+00
-  local_signal_decay: 7.140006E+02
-  rCM_min2: 2.893556E-02
-  rCM_th1: 1.251136E-02
-  rCM_th2: 9.703755E-01
-  rCM_peak1: 9.686197E-01
-  rCM_peak2: 3.283281E-01
+  global_signal_decay: 1.001524E+02
+  local_signal_rise: 8.536373E+01
+  rMC0: 2.536076E+00
+  rMC_th: 5.158179E-01
+  rMC_peak: 9.238480E-01
+  global_signal_rise: 1.524528E+01
+  peak_delta_weight: 2.413031E+00
+  rCM0: 9.286024E-01
+  local_signal_decay: 1.073788E+03
+  rCM_min2: 2.336212E-01
+  rCM_th1: 8.968046E-02
+  rCM_th2: 9.791894E-01
+  rCM_peak1: 3.890336E-01
+  rCM_peak2: 4.902626E-01
