--- a/config/simulate_BTSP_CA1_synthetic_population_20180910_novel_config.yaml
+++ b/config/simulate_BTSP_CA1_synthetic_population_20180910_novel_config.yaml
@@ -4,10 +4,13 @@ global_signal_peak: 0.9259394464
 initial_ramp_peak_val: 8.
 target_peak_shift: -10.
 num_cells: 400
-initial_active_fraction: 0.125
+initial_fraction_active: 0.25
+basal_target_fraction_active: 0.75
+reward_target_fraction_active: 1.25
 num_baseline_laps: 10
 num_assay_laps: 0
 num_reward_laps: 0
+peak_plateau_prob_per_lap: 1.
 reward_locs:
 seed_offset: 700000000
 target_range:
