--- a/config/simulate_BTSP_CA1_synthetic_population_novel_config.yaml
+++ b/config/simulate_BTSP_CA1_synthetic_population_novel_config.yaml
@@ -4,10 +4,10 @@ global_signal_peak: 0.9259394464
 initial_ramp_peak_val: 8.
 target_peak_shift: -10.
 num_cells: 400
-initial_fraction_active: 0.
+initial_fraction_active: 0.125
 basal_target_representation_density: 0.75
 reward_target_representation_density: 1.25
-num_baseline_laps: 10
+num_baseline_laps: 15
 num_assay_laps: 0
 num_reward_laps: 0
 peak_basal_plateau_prob_per_lap: 0.3
