20190118: - Considering an alternative voltage-dependent weight update model. - Trying version of weight-dependent model with a single weight update per lap.

--- a/config/optimize_BTSP_C_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_C_CA1_cli_config.yaml
@@ -116,7 +116,7 @@ objective_names:
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP
+optimization_title: bidirectional_BTSP_C
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
