20190128: - BTSP_E is like BTSP_orig but weights are updated once per lap. - BTSP_V_A and BTSP_V_B now have a peak_ramp_amp parameter. BTSP_V_B has a voltage-dependent dw/dt that is nonlinear (sigmoidal pot and sigmoidal depot).

--- a/config/20190118_BTSP_E_initial_params.yaml
+++ b/config/20190118_BTSP_E_initial_params.yaml
@@ -5,6 +5,7 @@
   rCM_peak1: 3.677306E-02
   rCM_th2: 2.934036E-02
   rCM_peak2: 3.463874E-03
+  rCM_min2: 0.2451194
   rMC0: 9.424432E-01
   rCM0: 5.495925E-01
   local_signal_rise: 1.754482E+02
