--- a/config/optimize_BTSP_E_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_E_CA1_cli_config.yaml
@@ -17,6 +17,9 @@ bounds:
   rCM_peak2: !!python/tuple
   - 0.001
   - 1.
+  rCM_min2: !!python/tuple
+  - 0.01
+  - 1.
   rMC0: !!python/tuple
   - 0.01
   - 2.
@@ -76,31 +79,31 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_C_CA1
+- - optimize_BTSP_E_CA1
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_C_CA1
+- source: optimize_BTSP_E_CA1
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_C_CA1
+- source: optimize_BTSP_E_CA1
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_C_CA1: get_objectives
+  optimize_BTSP_E_CA1: get_objectives
 kwargs:
   data_file_name: 20180411_BTSP2_CA1_data.hdf5
   verbose: 1
   min_delta_weight: -0.2
   data_keys:
-  params_path: config/20190118_BTSP_C_initial_params.yaml
+  params_path: config/20190118_BTSP_E_initial_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_C
+optimization_title: bidirectional_BTSP_E
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
@@ -109,6 +112,7 @@ param_names:
 - rCM_peak1
 - rCM_th2
 - rCM_peak2
+- rCM_min2
 - rMC0
 - rCM0
 - local_signal_rise
@@ -134,6 +138,7 @@ x0:
   rCM_th2: 8.612426E-01
   rCM_peak1: 7.443065E-01
   rCM_peak2: 4.395095E-01
+  rCM_min2: 0.2451194
   rCM0: 1.589147E-01
   rMC_peak: 4.092345E-01
   global_signal_rise: 1.578144E+02
