--- a/config/optimize_BTSP_E_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_E_CA1_cli_config.yaml
@@ -96,6 +96,7 @@ kwargs:
   data_file_name: 20180411_BTSP2_CA1_data.hdf5
   verbose: 1
   min_delta_weight: -0.2
+  input_field_width: 90.  # cm
   data_keys:
   params_path: config/20190118_BTSP_E_initial_params.yaml
 objective_names:
