20190301: - Mid-stream: Removing dependency on context for methods shared across alternative models.

--- a/config/optimize_BTSP_D_90cm_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_D_90cm_CA1_cli_config.yaml
@@ -85,13 +85,13 @@ kwargs:
   min_delta_weight: -0.2
   input_field_width: 90.  # cm
   data_keys:
-  params_path: config/20190118_BTSP_D_initial_params.yaml
+  params_path: config/20190225_BTSP_D_best_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_D
+optimization_title: bidirectional_BTSP_D_90cm
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
