--- a/config/optimize_BTSP_D_135cm_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_D_135cm_CA1_cli_config.yaml
@@ -91,7 +91,7 @@ objective_names:
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_D
+optimization_title: bidirectional_BTSP_D_135cm
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
