--- a/config/optimize_BTSP_V_B_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_V_B_CA1_cli_config.yaml
@@ -87,7 +87,7 @@ kwargs:
   verbose: 1
   min_delta_weight: -0.2
   data_keys:
-  # params_path: config/20180511_best_params.yaml
+  params_path: config/20190228_BTSP_V_B_best_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
