--- a/archived/config/optimize_BTSP_CA1_cli_config.yaml
+++ b/archived/config/optimize_BTSP_CA1_cli_config.yaml
@@ -109,7 +109,7 @@ get_features_stages:
 get_objectives:
   optimize_BTSP_CA1: get_objectives
 kwargs:
-  data_file_name: 20180411_BTSP2_CA1_data.hdf5
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
   verbose: 1
   min_delta_weight: -0.2
   data_keys:
