--- a/config/optimize_BTSP_E_CA1_cli_config.yaml
+++ b/config/optimize_BTSP_E_CA1_cli_config.yaml
@@ -93,7 +93,7 @@ get_features_stages:
 get_objectives:
   optimize_BTSP_E_CA1: get_objectives
 kwargs:
-  data_file_name: 20180411_BTSP2_CA1_data.hdf5
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
   verbose: 1
   min_delta_weight: -0.2
   input_field_width: 90.  # cm
