--- a/config/optimize_biBTSP_D_45cm_cli_config.yaml
+++ b/config/optimize_biBTSP_D_45cm_cli_config.yaml
@@ -66,21 +66,21 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_D_CA1
+- - optimize_biBTSP_D
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_D_CA1
+- source: optimize_biBTSP_D
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_D_CA1
+- source: optimize_biBTSP_D
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_D_CA1: get_objectives
+  optimize_biBTSP_D: get_objectives
 kwargs:
-  data_file_name: 20190621_BTSP_CA1_data_calibrated_input.hdf5
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
   input_field_width: 45.  # cm
   verbose: 1
   min_delta_weight: -0.2
@@ -90,7 +90,7 @@ objective_names:
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_D_45cm
+optimization_title: biBTSP_D_45cm
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
