--- a/config/optimize_biBTSP_V_A_90cm_cli_config.yaml
+++ b/config/optimize_biBTSP_V_A_90cm_cli_config.yaml
@@ -57,31 +57,31 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_V_A_CA1
+- - optimize_biBTSP_V_A
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_V_A_CA1
+- source: optimize_biBTSP_V_A
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_V_A_CA1
+- source: optimize_biBTSP_V_A
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_V_A_CA1: get_objectives
+  optimize_biBTSP_V_A: get_objectives
 kwargs:
-  data_file_name: 20180411_BTSP2_CA1_data.hdf5
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
+  input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  data_keys:
   # params_path: config/20180511_best_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_V_A
+optimization_title: biBTSP_V_A_90cm
 param_gen: PopulationAnnealing
 param_names:
 - k_pot
