--- a/config/optimize_biBTSP_F_90cm_cli_config.yaml
+++ b/config/optimize_biBTSP_F_90cm_cli_config.yaml
@@ -1,38 +1,32 @@
 bounds:
-  k_pot: !!python/tuple
-  - 0.1
-  - 15.
-  k_depot: !!python/tuple
-  - 0.1
-  - 15.
-  r_pot_peak: !!python/tuple
+  rMC_peak: !!python/tuple
   - 0.001
   - 1.
-  r_pot_th: !!python/tuple
+  rMC_th: !!python/tuple
   - 0.001
   - 1.
-  r_depot_th1: !!python/tuple
+  rCM_th: !!python/tuple
   - 0.001
   - 1.
-  r_depot_peak1: !!python/tuple
+  rCM_peak: !!python/tuple
   - 0.001
   - 1.
-  r_depot_th2: !!python/tuple
-  - 0.001
-  - 1.
-  r_depot_peak2: !!python/tuple
-  - 0.001
-  - 1.
-  r_depot_min2: !!python/tuple
+  rMC0: !!python/tuple
   - 0.01
-  - 1.
-  delta_peak_ramp_amp: !!python/tuple
-  - 0.
-  - 10.
-  local_signal_rise: !!python/tuple
+  - 3.
+  rCM0: !!python/tuple
+  - 0.01
+  - 3.
+  pot_signal_rise: !!python/tuple
   - 5.
   - 200.
-  local_signal_decay: !!python/tuple
+  pot_signal_decay: !!python/tuple
+  - 50.
+  - 4000.
+  depot_signal_rise: !!python/tuple
+  - 5.
+  - 200.
+  depot_signal_decay: !!python/tuple
   - 50.
   - 4000.
   global_signal_rise: !!python/tuple
@@ -41,27 +35,35 @@ bounds:
   global_signal_decay: !!python/tuple
   - 50.
   - 3000.
+  peak_delta_weight: !!python/tuple
+  - 1.5
+  - 4.
+default_params:
 rel_bounds:
-- - local_signal_decay
+- - pot_signal_decay
   - '>'
   - 1.0
-  - local_signal_rise
+  - pot_signal_rise
+- - depot_signal_decay
+  - '>'
+  - 1.0
+  - depot_signal_rise
 - - global_signal_decay
   - '>'
   - 1.0
   - global_signal_rise
-- - local_signal_decay
+- - pot_signal_decay
   - '>'
   - 1.0
   - global_signal_decay
-#- - k_pot
-#  - '>'
-#  - 1.0
-#  - k_depot
-- - r_depot_th2
+- - depot_signal_decay
   - '>'
   - 1.0
-  - r_depot_th1
+  - pot_signal_decay
+- - rMC0
+  - '>'
+  - 1.0
+  - rCM0
 feature_names:
 - spont_delta_amp
 - spont_delta_width
@@ -82,47 +84,46 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_V_C_CA1
+- - optimize_biBTSP_F
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_V_C_CA1
+- source: optimize_biBTSP_F
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_V_C_CA1
+- source: optimize_biBTSP_F
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_V_C_CA1: get_objectives
+  optimize_biBTSP_F: get_objectives
 kwargs:
   data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
+  input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  data_keys:
-  # params_path: config/20180511_best_params.yaml
+  # params_path: config/20190625_biBTSP_F_90cm_initial_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP_V_C
+optimization_title: biBTSP_F_90cm
 param_gen: PopulationAnnealing
 param_names:
-- k_pot
-- k_depot
-- r_pot_peak
-- r_pot_th
-- r_depot_peak1
-- r_depot_th1
-- r_depot_peak2
-- r_depot_th2
-- r_depot_min2
-- delta_peak_ramp_amp
-- local_signal_rise
-- local_signal_decay
+- rMC_peak
+- rMC_th
+- rCM_th
+- rCM_peak
+- rMC0
+- rCM0
+- pot_signal_rise
+- pot_signal_decay
+- depot_signal_rise
+- depot_signal_decay
 - global_signal_rise
 - global_signal_decay
+- peak_delta_weight
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -131,17 +132,16 @@ target_range:
   weights_smoothness: 0.005
 target_val:
 x0:
-  k_pot: 1.494780E+01
-  k_depot: 4.183372E-01
-  r_pot_peak: 9.056280E-02
-  r_pot_th: 3.491252E-01
-  r_depot_peak1: 3.069892E-01
-  r_depot_th1: 8.710066E-01
-  r_depot_peak2: 3.069892E-01
-  r_depot_th2: 8.810066E-01
-  r_depot_min2: 0.01
-  delta_peak_ramp_amp: 8.702408E+00
-  local_signal_rise: 8.293589E+01
-  local_signal_decay: 4.482438E+02
-  global_signal_rise: 8.554945E+01
-  global_signal_decay: 2.216106E+02
+  global_signal_decay: 327.9013424874619
+  global_signal_rise: 33.10370285112559
+  peak_delta_weight: 3.8584356046894137
+  rCM0: 0.27166095889790975
+  rCM_peak: 0.00447680672223396
+  rCM_th: 0.0015410493348019167
+  rMC0: 1.0627627534180737
+  rMC_peak: 0.20959879679896984
+  rMC_th: 0.1836517377352108
+  pot_signal_rise: 8.55238892503821
+  pot_signal_decay: 917.3782517534474
+  depot_signal_rise: 8.55238892503821
+  depot_signal_decay: 917.3792517534475
