--- a/config/optimize_biBTSP_F_90cm_cli_config.yaml
+++ b/config/optimize_biBTSP_F_90cm_cli_config.yaml
@@ -13,28 +13,28 @@ bounds:
   - 1.
   rMC0: !!python/tuple
   - 0.01
-  - 3.
+  - 10.
   rCM0: !!python/tuple
   - 0.01
-  - 3.
+  - 10.
   pot_signal_rise: !!python/tuple
   - 5.
   - 200.
   pot_signal_decay: !!python/tuple
   - 50.
-  - 4000.
+  - 2500.
   depot_signal_rise: !!python/tuple
   - 5.
   - 200.
   depot_signal_decay: !!python/tuple
   - 50.
-  - 4000.
+  - 2500.
   global_signal_rise: !!python/tuple
   - 5.
   - 200.
   global_signal_decay: !!python/tuple
   - 50.
-  - 3000.
+  - 2500.
   peak_delta_weight: !!python/tuple
   - 1.5
   - 4.
@@ -102,7 +102,7 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  # params_path: config/20190625_biBTSP_F_90cm_initial_params.yaml
+  params_path: config/20190625_biBTSP_F_90cm_initial_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
@@ -129,7 +129,7 @@ target_range:
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.01
 target_val:
 x0:
   global_signal_decay: 327.9013424874619
