--- a/config/optimize_biBTSP_C_90cm_cli_config.yaml
+++ b/config/optimize_biBTSP_C_90cm_cli_config.yaml
@@ -1,43 +1,22 @@
 bounds:
-  rMC_peak: !!python/tuple
-  - 0.001
-  - 1.
-  rMC_th: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_th1: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_peak1: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_th2: !!python/tuple
-  - 0.01
-  - 1.
-  rCM_peak2: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_min2: !!python/tuple
-  - 0.01
-  - 1.
   rMC0: !!python/tuple
-  - 0.1
+  - 0.01
   - 10.
   rCM0: !!python/tuple
-  - 0.1
+  - 0.01
   - 10.
   local_signal_rise: !!python/tuple
   - 5.
   - 200.
   local_signal_decay: !!python/tuple
   - 50.
-  - 4000.
+  - 2500.
   global_signal_rise: !!python/tuple
   - 5.
   - 200.
   global_signal_decay: !!python/tuple
   - 50.
-  - 3000.
+  - 2500.
   peak_delta_weight: !!python/tuple
   - 1.5
   - 4.
@@ -55,26 +34,10 @@ rel_bounds:
   - '>'
   - 1.0
   - global_signal_decay
-- - rMC_peak
+- - rMC0
   - '>'
   - 1.0
-  - rMC_th
-- - rCM_peak1
-  - '>'
-  - 1.0
-  - rCM_th1
-- - rCM_peak2
-  - '>'
-  - 1.0
-  - rCM_th1
-- - rCM_th2
-  - '>'
-  - 1.0
-  - rCM_peak1
-- - rCM_th2
-  - '>'
-  - 1.0
-  - rCM_peak2
+  - rCM0
 feature_names:
 - spont_delta_amp
 - spont_delta_width
@@ -95,39 +58,33 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_CA1
+- - optimize_biBTSP_C
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_CA1
+- source: optimize_biBTSP_C
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_CA1
+- source: optimize_biBTSP_C
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_CA1: get_objectives
+  optimize_biBTSP_C: get_objectives
 kwargs:
-  data_file_name: '20180411_BTSP2_CA1_data.hdf5'
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
+  input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  data_keys:
+  params_path: config/20190626_biBTSP_C_90cm_initial_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP
+optimization_title: biBTSP_C_90cm
 param_gen: PopulationAnnealing
 param_names:
-- rMC_peak
-- rMC_th
-- rCM_th1
-- rCM_peak1
-- rCM_th2
-- rCM_peak2
-- rCM_min2
 - rMC0
 - rCM0
 - local_signal_rise
@@ -143,17 +100,10 @@ target_range:
   weights_smoothness: 0.01
 target_val:
 x0:
-  global_signal_decay: 132.717591
-  local_signal_rise: 39.067314
-  rMC_th: 0.273831
-  rMC_peak: 0.478475
-  global_signal_rise: 107.367346
-  peak_delta_weight: 1.534246
-  rCM_min2: 0.194243
-  local_signal_decay: 64.059869
-  rCM0: 1.575364
-  rMC0: 5.796954
-  rCM_th1: 0.347866
-  rCM_th2: 0.688018
-  rCM_peak1: 0.688015
-  rCM_peak2: 0.503690
+  global_signal_decay: 3.000893E+02
+  local_signal_rise: 1.125681E+02
+  rMC0: 7.407045E-01
+  peak_delta_weight: 3.681929E+00
+  local_signal_decay: 1.739002E+03
+  rCM0: 1.589147E-01
+  global_signal_rise: 1.578144E+02
