--- a/config/optimize_biBTSP_V_B_90cm_cli_config.yaml
+++ b/config/optimize_biBTSP_V_B_90cm_cli_config.yaml
@@ -1,47 +1,37 @@
 bounds:
-  rMC_peak: !!python/tuple
-  - 0.001
-  - 1.
-  rMC_th: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_th1: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_peak1: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_th2: !!python/tuple
-  - 0.01
-  - 1.
-  rCM_peak2: !!python/tuple
-  - 0.001
-  - 1.
-  rCM_min2: !!python/tuple
-  - 0.01
-  - 1.
-  rMC0: !!python/tuple
+  k_pot: !!python/tuple
   - 0.1
   - 10.
-  rCM0: !!python/tuple
+  k_depot: !!python/tuple
   - 0.1
   - 10.
+  r_pot_th: !!python/tuple
+  - 0.001
+  - 1.
+  r_pot_peak: !!python/tuple
+  - 0.001
+  - 1.
+  r_depot_th: !!python/tuple
+  - 0.001
+  - 1.
+  r_depot_peak: !!python/tuple
+  - 0.001
+  - 1.
   local_signal_rise: !!python/tuple
   - 5.
   - 200.
   local_signal_decay: !!python/tuple
   - 50.
-  - 4000.
+  - 2500.
   global_signal_rise: !!python/tuple
   - 5.
   - 200.
   global_signal_decay: !!python/tuple
   - 50.
-  - 3000.
-  peak_delta_weight: !!python/tuple
-  - 1.5
-  - 4.
-default_params:
+  - 2500.
+  delta_peak_ramp_amp: !!python/tuple
+  - 0.
+  - 10.
 rel_bounds:
 - - local_signal_decay
   - '>'
@@ -55,26 +45,10 @@ rel_bounds:
   - '>'
   - 1.0
   - global_signal_decay
-- - rMC_peak
+- - k_pot
   - '>'
   - 1.0
-  - rMC_th
-- - rCM_peak1
-  - '>'
-  - 1.0
-  - rCM_th1
-- - rCM_peak2
-  - '>'
-  - 1.0
-  - rCM_th1
-- - rCM_th2
-  - '>'
-  - 1.0
-  - rCM_peak1
-- - rCM_th2
-  - '>'
-  - 1.0
-  - rCM_peak2
+  - k_depot
 feature_names:
 - spont_delta_amp
 - spont_delta_width
@@ -95,46 +69,44 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_min_val
 update_context:
-- - optimize_BTSP_CA1
+- - optimize_biBTSP_V_B
   - update_model_params
 get_features_stages:
-- source: optimize_BTSP_CA1
+- source: optimize_biBTSP_V_B
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_BTSP_CA1
+- source: optimize_biBTSP_V_B
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_BTSP_CA1: get_objectives
+  optimize_biBTSP_V_B: get_objectives
 kwargs:
-  data_file_name: '20180411_BTSP2_CA1_data.hdf5'
+  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
+  input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  data_keys:
+  # params_path: config/20180511_best_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: bidirectional_BTSP
+optimization_title: biBTSP_V_B_90cm
 param_gen: PopulationAnnealing
 param_names:
-- rMC_peak
-- rMC_th
-- rCM_th1
-- rCM_peak1
-- rCM_th2
-- rCM_peak2
-- rCM_min2
-- rMC0
-- rCM0
+- k_pot
+- k_depot
+- r_pot_th
+- r_pot_peak
+- r_depot_th
+- r_depot_peak
 - local_signal_rise
 - local_signal_decay
 - global_signal_rise
 - global_signal_decay
-- peak_delta_weight
+- delta_peak_ramp_amp
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -143,17 +115,14 @@ target_range:
   weights_smoothness: 0.01
 target_val:
 x0:
-  global_signal_decay: 664.072790
-  local_signal_rise: 169.956415
-  rMC_th: 0.296169
-  rMC_peak: 0.393799
-  global_signal_rise: 122.421077
-  peak_delta_weight: 2.487281
-  rCM_min2: 0.098216
-  local_signal_decay: 765.678707
-  rCM0: 1.096243
-  rMC0: 6.382766
-  rCM_th1: 0.118750
-  rCM_th2: 0.507772
-  rCM_peak1: 0.215151
-  rCM_peak2: 0.118764
+  k_pot: 9.991864E+00
+  k_depot: 1.030430E-01
+  local_signal_rise: 1.995811E+02
+  local_signal_decay: 4.546595E+02
+  global_signal_rise: 1.199720E+02
+  global_signal_decay: 2.566589E+02
+  delta_peak_ramp_amp: 0.
+  r_pot_th: 3.160245E-01
+  r_pot_peak: 4.092345E-01
+  r_depot_th: 7.109480E-02
+  r_depot_peak: 7.443065E-01
