--- a/config/20190625_biBTSP_D_90cm_initial_params.yaml
+++ b/config/20190625_biBTSP_D_90cm_initial_params.yaml
@@ -1,15 +1,15 @@
 1:
-  global_signal_decay: 327.9013424874619
-  global_signal_rise: 33.10370285112559
-  local_signal_decay: 917.3782517534474
-  local_signal_rise: 8.55238892503821
-  peak_delta_weight: 3.8584356046894137
-  rCM0: 0.27166095889790975
-  rCM_peak: 0.00447680672223396
-  rCM_th: 0.0015410493348019167
-  rMC0: 1.0627627534180737
-  rMC_peak: 0.20959879679896984
-  rMC_th: 0.1836517377352108
+  global_signal_decay: 4.489167E+02
+  global_signal_rise: 1.739352E+02
+  local_signal_decay: 1.250320E+03
+  local_signal_rise: 6.298970E+01
+  peak_delta_weight: 3.699263E+00
+  rCM0: 1.347899E-01
+  rCM_peak: 8.584021E-03
+  rCM_th: 2.411664E-03
+  rMC0: 4.834452E-01
+  rMC_peak: 6.474074E-02
+  rMC_th: 1.767498E-01
 4:
   global_signal_decay: 1478.8340952835765
   global_signal_rise: 117.50813760285268
