--- a/config/optimize_biBTSP_D_75cm_cli_config.yaml
+++ b/config/optimize_biBTSP_D_75cm_cli_config.yaml
@@ -84,17 +84,17 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_D: get_objectives
 kwargs:
-  data_file_name: 20190621_biBTSP_data_calibrated_input.hdf5
-  input_field_width: 135.  # cm
+  data_file_name: 20190708_biBTSP_data_calibrated_input.hdf5
+  input_field_width: 75.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  params_path: config/20190703_biBTSP_D_135cm_initial_params.yaml
+  # params_path: config/20190703_biBTSP_D_75cm_initial_params.yaml
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - self_consistent_delta_residual_score
-optimization_title: biBTSP_D_135cm
+optimization_title: biBTSP_D_75cm
 param_gen: PopulationAnnealing
 param_names:
 - rMC_peak
