--- a/config/optimize_biBTSP_D_105cm_cli_config.yaml
+++ b/config/optimize_biBTSP_D_105cm_cli_config.yaml
@@ -51,24 +51,30 @@ rel_bounds:
   - 1.0
   - rCM0
 feature_names:
-- spont_delta_amp
+- spont_delta_val_at_target_peak
+- spont_delta_val_at_model_peak
 - spont_delta_width
 - spont_delta_peak_shift
 - spont_delta_asymmetry
 - spont_delta_min_loc
-- spont_delta_min_val
-- exp1_delta_amp
+- spont_delta_val_at_target_min
+- spont_delta_val_at_model_min
+- exp1_delta_val_at_target_peak
+- exp1_delta_val_at_model_peak
 - exp1_delta_width
 - exp1_delta_peak_shift
 - exp1_delta_asymmetry
 - exp1_delta_min_loc
-- exp1_delta_min_val
-- exp2_delta_amp
+- exp1_delta_val_at_target_min
+- exp1_delta_val_at_model_min
+- exp2_delta_val_at_target_peak
+- exp2_delta_val_at_model_peak
 - exp2_delta_width
 - exp2_delta_peak_shift
 - exp2_delta_asymmetry
 - exp2_delta_min_loc
-- exp2_delta_min_val
+- exp2_delta_val_at_target_min
+- exp2_delta_val_at_model_min
 update_context:
 - - optimize_biBTSP_D
   - update_model_params
