--- a/config/optimize_biBTSP_SRL_A_cli_config.yaml
+++ b/config/optimize_biBTSP_SRL_A_cli_config.yaml
@@ -78,7 +78,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_SRL_A: get_objectives
 kwargs:
-  data_file_name: 20190710_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
@@ -105,10 +105,10 @@ target_range:
   weights_smoothness: 0.005
 target_val:
 x0:
-  global_signal_decay: 3.000893E+02
-  local_signal_rise: 1.125681E+02
-  k_pot: 7.407045E-01
-  peak_delta_weight: 3.681929E+00
-  local_signal_decay: 1.739002E+03
-  k_dep: 1.589147E-01
-  global_signal_rise: 1.578144E+02
+  global_signal_decay: 5.438590E+01
+  global_signal_rise: 1.528224E+01
+  k_dep: 1.009296E-02
+  k_pot: 6.601044E+00
+  local_signal_decay: 4.117672E+02
+  local_signal_rise: 1.986963E+01
+  peak_delta_weight: 2.425717E+00
