--- a/config/optimize_biBTSP_SRL_C_cli_config.yaml
+++ b/config/optimize_biBTSP_SRL_C_cli_config.yaml
@@ -104,7 +104,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_SRL_C: get_objectives
 kwargs:
-  data_file_name: 20190710_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
@@ -137,16 +137,16 @@ target_range:
   weights_smoothness: 0.005
 target_val:
 x0:
-  global_signal_decay: 327.9013424874619
-  global_signal_rise: 33.10370285112559
-  peak_delta_weight: 3.8584356046894137
-  k_dep: 0.27166095889790975
-  f_dep_peak: 0.00447680672223396
-  f_dep_th: 0.0015410493348019167
-  k_pot: 1.0627627534180737
-  f_pot_peak: 0.20959879679896984
-  f_pot_th: 0.1836517377352108
-  pot_signal_rise: 8.55238892503821
-  pot_signal_decay: 917.3782517534474
-  dep_signal_rise: 8.55238892503821
-  dep_signal_decay: 917.3792517534475
+  dep_signal_decay: 2.357343E+03
+  dep_signal_rise: 4.926484E+01
+  global_signal_decay: 1.276048E+02
+  global_signal_rise: 9.072816E+01
+  peak_delta_weight: 2.672232E+00
+  pot_signal_decay: 6.294325E+02
+  pot_signal_rise: 5.263028E+00
+  k_dep: 2.123671E-01
+  f_dep_peak: 5.535318E-02
+  f_dep_th: 3.973144E-03
+  k_pot: 3.601357E+00
+  f_pot_peak: 8.910599E-01
+  f_pot_th: 2.815491E-02
