--- a/config/simulate_biBTSP_synthetic_network_config.yaml
+++ b/config/simulate_biBTSP_synthetic_network_config.yaml
@@ -1,11 +1,10 @@
 data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
 input_field_width: 90.  # cm
 min_delta_weight: -0.2
-global_signal_peak: 0.9259394464  # how was this determined?
 initial_ramp_peak_val: 8.
 target_peak_shift: -10.
 num_cells: 400
-initial_fraction_active: 0.5
+initial_fraction_active: 0.
 basal_target_representation_density: 0.75
 reward_target_representation_density: 1.25
 track_phases:
@@ -16,11 +15,12 @@ track_phases:
     num_laps: 10
   - lap_type: explore
     num_laps: 5
-peak_basal_plateau_prob_per_lap: 0.25
-peak_reward_plateau_prob_per_lap: 0.25
+peak_basal_plateau_prob_per_lap: 0.05
+peak_reward_plateau_prob_per_lap: 0.1
 basal_plateau_prob_ramp_sensitivity: 0.25
 reward_plateau_prob_ramp_sensitivity: 0.5
 seed_offset: 90000000000
+trial: 0
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
