--- a/config/simulate_biBTSP_synthetic_network_config.yaml
+++ b/config/simulate_biBTSP_synthetic_network_config.yaml
@@ -5,8 +5,8 @@ initial_ramp_peak_val: 8.
 target_peak_shift: -10.
 num_cells: 400
 initial_fraction_active: 0.
-basal_target_representation_density: 0.75
-reward_target_representation_density: 1.25
+basal_target_representation_density: 0.3
+reward_target_representation_density: 0.45
 track_phases:
   - lap_type: explore
     num_laps: 10
@@ -16,9 +16,9 @@ track_phases:
   - lap_type: explore
     num_laps: 5
 peak_basal_plateau_prob_per_lap: 0.05
-peak_reward_plateau_prob_per_lap: 0.1
-basal_plateau_prob_ramp_sensitivity: 0.25
-reward_plateau_prob_ramp_sensitivity: 0.5
+peak_reward_plateau_prob_per_lap: 0.05
+basal_plateau_prob_ramp_sensitivity: 0.
+reward_plateau_prob_ramp_sensitivity: 1.
 seed_offset: 90000000000
 trial: 0
 target_range:
@@ -28,14 +28,14 @@ target_range:
   residuals: 0.1
   weights_smoothness: 0.005
 x0:
-  global_signal_decay: 4.489167E+02
-  global_signal_rise: 1.739352E+02
-  local_signal_decay: 1.250320E+03
-  local_signal_rise: 6.298970E+01
-  peak_delta_weight: 3.699263E+00
-  k_dep: 1.347899E-01
-  f_dep_peak: 8.584021E-03
-  f_dep_th: 2.411664E-03
-  k_pot: 4.834452E-01
-  f_pot_peak: 6.474074E-02
-  f_pot_th: 1.767498E-01
+  f_dep_peak: 1.194999E-01
+  f_dep_th: 7.820899E-03
+  f_pot_peak: 9.828062E-01
+  f_pot_th: 5.262555E-01
+  global_signal_decay: 2.232987E+02
+  global_signal_rise: 3.183521E+01
+  k_dep: 3.498200E-01
+  k_pot: 1.172080E+00
+  local_signal_decay: 1.127795E+03
+  local_signal_rise: 1.597686E+02
+  peak_delta_weight: 2.400251E+00
