--- a/config/optimize_biBTSP_synthetic_config.yaml
+++ b/config/optimize_biBTSP_synthetic_config.yaml
@@ -67,6 +67,7 @@ feature_names:
 - induction2_delta_min_loc
 - induction2_delta_val_at_target_min
 - induction2_delta_val_at_model_min
+- ramp_amp_after_first_plateau
 update_context:
 - - optimize_biBTSP_synthetic
   - update_model_params
@@ -86,7 +87,7 @@ kwargs:
   induction_loc:
     '1': 90.
     '2': 0.
-  target_peak_weight: 3.
+  target_peak_delta_weight: 3.
   target_peak_shift_1: -10.
   target_peak_shift_2: 0.
   target_peak_val_1: 8.
@@ -96,6 +97,7 @@ objective_names:
 - induction1_residual_score
 - induction2_residual_score
 - self_consistent_delta_residual_score
+- ramp_amp_after_first_plateau
 optimization_title: biBTSP_synthetic
 param_gen: PopulationAnnealing
 param_names:
@@ -116,7 +118,9 @@ target_range:
   delta_peak_val: 0.01
   residuals: 0.1
   weights_smoothness: 0.005
+  ramp_amp_after_first_plateau: 0.01
 target_val:
+  ramp_amp_after_first_plateau: 5.
 x0:
   f_dep_peak: 1.194999E-01
   f_dep_th: 7.820899E-03
